@@ -178,9 +178,11 @@ module ActiveRecord #:nodoc:
     end
 
     def serializable_method_attributes
-      Array(options[:methods]).collect { |name| MethodAttribute.new(name.to_s, @record) }
+      Array(options[:methods]).inject([]) do |method_attributes, name|
+        method_attributes << MethodAttribute.new(name.to_s, @record) if @record.respond_to?(name.to_s)
+        method_attributes
+      end
     end
-
 
     def add_attributes
       (serializable_attributes + serializable_method_attributes).each do |attribute|
